Update deprecated call